# GtestGmockCPP

./: CMakeLists.txt  ClassThatUsesDB.cpp  ClassThatUsesDB.h  DBConnection.h  README.md  main.cpp
tests/: CMakeLists.txt  test_dbconn.cpp  test_placeholder.cpp
